--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
       "discord-token": "discord/discord-token.js",
       "discordMessage": "discord/discordMessage.js",
       "discordMessageManager": "discord/discordMessageManager.js",
+      "discordFetchMessage": "discord/discordFetchMessage.js",
       "discordPermissions": "discord/discordPermissions.js",
       "discordReactionManager": "discord/discordReactionManager.js",
       "discordClient": "discord/discordClient.js",
